Change new File().toURI.toURL() to new URL().